test/bad-ambient-functions/bad-ambient-functions.output
TsIdl Version 1.0
Copyright (C) Paul Vick. All rights reserved.

test/bad-ambient-functions/bad-ambient-functions.d.ts(0,0): error TS1019: Generics are not allowed.
test/bad-ambient-functions/bad-ambient-functions.d.ts(1,0): error TS1006: Overloading not allowed.
