test/bad-ambient-functions/bad-ambient-functions.d.ts
declare function a<T>(b: T): T;
declare function b(a: string): void;
declare function b(a: "foo"): void;
